# NeoC-sample-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.c
